--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
   "require": {
-    "slim/slim": "^2.6",
-    "vrana/notorm": "dev-master",
-    "palanik/corsslim": "*",
-    "intervention/image": "^2.3",
-    "mailgun/mailgun-php": ">=1.7.2",
-    "mashape/unirest-php": "^2.6",
-    "slim/views": "*",
-    "twig/twig": "^1.24",
-    "twilio/sdk": "^4.10"
+      "slim/slim": "^2.6",
+      "vrana/notorm": "dev-master",
+      "palanik/corsslim": "*",
+      "intervention/image": "^2.3",
+      "mailgun/mailgun-php": ">=1.7.2",
+      "slim/views": "*",
+      "twig/twig": "^1.24",
+      "twilio/sdk": "^4.10",
+    "mashape/unirest-php": "^2.6"
   }
 }
